change database models, add table groups, edit config file
